--- a/htmlycss/DiseñoWebResponsivo/columnas.css
+++ b/htmlycss/DiseñoWebResponsivo/columnas.css
@@ -4,6 +4,7 @@
     list-style: none;
     text-decoration: none;
     font-family: sans-serif;
+    box-sizing: border-box;
 }
 .contenedor{
     position: relative;
@@ -16,8 +17,26 @@
     margin:auto;
     width:100%;
     height: auto;
+    clear: both;
+    display: table;
 }
-col-12{
+[class*="col-"]{
+    float: left;
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.col-12{
     width:100%,
 }
+
+
+.col-6{
+    width: 50%;
+}
+
+.col-4{
+    width: 33.333333333%;
+}
+
 
