--- a/htmlycss/DiseñoWebResponsivo/columnas.css
+++ b/htmlycss/DiseñoWebResponsivo/columnas.css
@@ -20,9 +20,9 @@
     clear: both;
     display: table;
 }
+
 [class*="col-"]{
     float: left;
-    /* border: 1px solid black; */
     padding: 20px;
 }
 
@@ -33,7 +33,8 @@ header #logo{
     line-height: 60px;
 }
 
-header center{
+header center p{
+    text-align: center;
     width:42px;
     line-height:42px;
     border-radius:100%;
@@ -41,16 +42,58 @@ header center{
     color:white;
 }
 
-header center#icono1{
+header center#icono1 p{
     background: blue;
 }
 
-header center#icono2{
+header center#icono2 p{
     background: green;
 }
 
-header center#icono3{
+header center#icono3 p{
     background: red;
+}
+
+nav ul li {
+    padding: 10px;
+    text-align: center;
+}
+
+nav ul li a{
+    display: block;
+    background: rgb(104, 22, 104);
+    font-family: "Kaushan Script", cursive;
+    color: white;
+    line-height: 48px;
+}
+
+a:hover{
+    background: rosybrown;
+}
+
+a:active{
+    background: rgb(224, 22, 224);
+}
+
+#seccion3 center{
+    padding:20px;
+}
+
+#seccion3 img{
+    border-radius:100%;
+    width: 200px;
+    height: 200px;
+    padding: 10px;
+}
+
+#seccion3 h1{
+    font-family: "Kaushan Script", cursive;
+    font-size: 40px;
+    padding: 10px;
+}
+
+#seccion3 p{
+    padding:10px;
 }
 
 
@@ -67,6 +110,7 @@ header center#icono3{
     .col-lg-3{width:25%;}
     .col-lg-2{width:16.66666667%;}
     .col-lg-1{width:8.333333333%;}
+    .col-lg-0{display:none;}
 }
 
 @media(max-width:1199px) and (min-width: 992px){
@@ -82,6 +126,7 @@ header center#icono3{
     .col-md-3{width:25%;}
     .col-md-2{width:16.66666667%;}
     .col-md-1{width:8.333333333%;}
+    .col-lg-0{display:none;}
 }
 
 @media(max-width:991px) and (min-width:768px){
@@ -97,6 +142,7 @@ header center#icono3{
     .col-sm-3{width:25%;}
     .col-sm-2{width:16.66666667%;}
     .col-sm-1{width:8.333333333%;}
+    .col-lg-0{display:none;}
 }
 
 @media(max-width:767px) {
@@ -112,5 +158,6 @@ header center#icono3{
     .col-xs-3{width:25%;}
     .col-xs-2{width:16.66666667%;}
     .col-xs-1{width:8.333333333%;}
+    .col-lg-0{display:none;}
 }
 
