--- a/htmlycss/DiseñoWebResponsivo/columnas.css
+++ b/htmlycss/DiseñoWebResponsivo/columnas.css
@@ -67,7 +67,7 @@ nav ul li a{
     line-height: 48px;
 }
 
-a:hover{
+nav a:hover{
     background: rosybrown;
 }
 
@@ -96,6 +96,73 @@ a:active{
     padding:10px;
 }
 
+#seccion4 aside ul li{
+    background-color: violet;
+    padding: 10px;
+    margin: 2px 10px;
+    list-style: square;
+    list-style-position: inside;
+    cursor: pointer;
+}
+
+#seccion4 li:hover{
+    background-color: hsl(300, 76%, 62%);
+}
+
+#seccion4 article h1{
+    font-family: "Kaushan Script",cursive;
+    font-size:40px;
+    margin:20px;
+}
+
+#seccion4 img{
+    float:left;
+    margin-right:20px;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+#seccion4 article p{
+    margin: 5px 20px;
+    font-size:14px;
+    text-align:justify;
+}
+
+#seccion4 aside#der h1{
+    line-height: 50px;
+    text-align:center;
+    background: olive;
+    color:white;
+    margin-bottom: 5px;
+}
+
+#seccion4 input{
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0px;
+}
+
+#seccion4 input:last-child{
+    background-color: rosybrown;
+    border: none;
+    cursor: pointer;
+}
+
+#seccion4 input:last-child:hover{
+    background-color: rgb(192, 131, 131);
+}
+
+footer{
+    padding:20px 10px;
+}
+
+footer div{
+    background: rgb(156, 14, 156);
+    text-align: center;
+    line-height:50px;
+    color:white;
+}
 
 @media(min-width:3000px){
     .col-lg-12{width:100%;}
@@ -111,6 +178,10 @@ a:active{
     .col-lg-2{width:16.66666667%;}
     .col-lg-1{width:8.333333333%;}
     .col-lg-0{display:none;}
+
+    #seccion4 article p img{
+        width: 50%;
+    }
 }
 
 @media(max-width:2999px) and (min-width: 992px){
@@ -127,6 +198,10 @@ a:active{
     .col-md-2{width:16.66666667%;}
     .col-md-1{width:8.333333333%;}
     .col-lg-0{display:none;}
+
+    #seccion4 article p img{
+        width: 60%;
+    }
 }
 
 @media(max-width:991px) and (min-width:768px){
@@ -143,6 +218,10 @@ a:active{
     .col-sm-2{width:16.66666667%;}
     .col-sm-1{width:8.333333333%;}
     .col-lg-0{display:none;}
+
+    #seccion4 article p img{
+        width: 100%;
+    } 
 }
 
 @media(max-width:767px) {
@@ -159,5 +238,10 @@ a:active{
     .col-xs-2{width:16.66666667%;}
     .col-xs-1{width:8.333333333%;}
     .col-lg-0{display:none;}
+
+    #seccion4 article p img{
+        width: 100%;
+        margin-bottom: 20px;
+    } 
 }
 
