--- a/sass/proyecto-s/sass/main.css
+++ b/sass/proyecto-s/sass/main.css
@@ -6,13 +6,59 @@ body {
 }
 
 nav {
-  background-color: rgb(90, 89, 28);
-  width: 100%;
-  height: 100px;
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  color: rgb(63, 38, 1);
+  padding: 15px;
+}
+nav p {
+  font-size: 1.5rem;
+  padding-left: 30px;
+}
+nav .icons {
+  display: flex;
+  gap: 10px;
+  button-background: none;
+  button-border-style: none;
 }
 
 main {
   background-color: rgb(90, 89, 28);
+}
+
+article {
+  width: auto;
+  color: rgb(63, 38, 1);
+  display: flex;
+  justify-content: space-around;
+}
+article .objetivo-section {
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+  gap: 50px;
+}
+article h2 {
+  font-size: 3em;
+  padding: 0px;
+  margin: 0px;
+}
+article p {
+  font-size: 1.5em;
+}
+article button {
+  width: 12vw;
+  padding: 20px;
+  background-color: orange;
+  border-style: none;
+  border-radius: 35px;
+  color: white;
+  font-size: 1em;
+}
+article img {
+  width: 25vw;
+  border-radius: 19px;
 }
 
 footer {
