--- a/sass/proyecto-s/sass/main.scss
+++ b/sass/proyecto-s/sass/main.scss
@@ -2,6 +2,8 @@ $primary-color: rgb(90,89,28);
 $secundary-color: rgb(224,124,31);
 $tertiary-color: rgb(226,226,154);
 $primary-text-color: rgb(63,38,1);
+$quartery-color: orange;
+$paragraph-size: 1.5em;
 $font-stack: 'IBM Plex Sans", sans-serif';
 
 body{
@@ -12,9 +14,11 @@ body{
 }
 
 nav{
-    background-color: $primary-color;
-    width: 100%;
-    height: 100px;
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    color: $primary-text-color;
+    padding: 15px;
 
     p{
         font-size: 1.5rem;
@@ -23,6 +27,7 @@ nav{
 
     .icons{
         display: flex;
+        gap: 10px;
         button: {
             background: none;
             border-style: none;
@@ -32,6 +37,47 @@ nav{
 
 main{
     background-color: $primary-color;
+}
+
+article{
+    width: auto;
+    color: $primary-text-color;
+    display: flex;
+    justify-content: space-around;
+
+    .objetivo-section{
+        display: flex;
+        flex-direction: column;
+        padding-top: 50px;
+        gap: 50px;
+    }
+
+    h2{
+        font-size: 3em;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    p{
+        font-size: $paragraph-size;
+    }
+
+    button{
+        width: 12vw;
+        padding: 20px;
+        background-color: $quartery-color;
+        border-style: none;
+        border-radius: 35px;
+        color: white;
+        font-size: 1em;
+    }
+
+    
+    img{
+        width: 25vw;
+        border-radius: 19px;
+    }
+    
 }
 
 footer{
