--- a/sass/proyecto-s/sass/main.scss
+++ b/sass/proyecto-s/sass/main.scss
@@ -6,6 +6,20 @@ $quartery-color: orange;
 $paragraph-size: 1.5em;
 $font-stack: 'IBM Plex Sans", sans-serif';
 
+@mixin flexCenter($direction, $content, $align){
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $content;
+    align-items: $align;
+}
+
+@mixin buttonStyle{
+    button{
+        background: none;
+        border-style: none;
+    }
+}
+
 body{
     background-color: rgb(241, 208, 115);
     padding: 0;
@@ -28,10 +42,7 @@ nav{
     .icons{
         display: flex;
         gap: 10px;
-        button: {
-            background: none;
-            border-style: none;
-        }
+        @include buttonStyle;
     }
 }
 
@@ -42,8 +53,10 @@ main{
 article{
     width: auto;
     color: $primary-text-color;
-    display: flex;
-    justify-content: space-around;
+    @include flexCenter(row, space-between, center );
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-top: 70px;
 
     .objetivo-section{
         display: flex;
@@ -76,8 +89,67 @@ article{
     img{
         width: 25vw;
         border-radius: 19px;
+        margin-bottom: 20px;
     }
     
+}
+
+.product-section{
+    width: auto;
+    height: auto;
+    background-color: rgb(214, 201, 176);
+    padding: 60px;
+    text-align: center;
+}
+
+.card-section1{
+    display: flex;
+    width: auto;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    column-gap: 200px;
+    row-gap: 200px;
+
+    .product-card{
+        width: 14vw;
+        height: 45vh;
+        background-color: $secundary-color;
+        color: $primary-text-color;
+        padding: 20px;
+        border-radius: 8px;
+        text-align: center;
+
+        .icons{
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            padding-bottom: 12px;
+
+            svg{
+                width: 28px;
+                height: 28px;
+                stroke: olive;
+                stroke-width: yellow;
+            }
+        }
+
+        img{
+            width: 200px;
+            height: 250px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+        
+    }
+}
+
+.card-section2{
+    @extend .card-section1;
+    .product-card{
+        background-color: $tertiary-color;
+        color: rgb(37, 51, 12);
+    }
 }
 
 footer{
